# video-streaming-platform

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  openapi.json  openapi.yaml  pyproject.toml
backend/app/: main.py
backend/app/clients/: dynamodb.py  s3.py
backend/app/common/: deps.py  errors.py  schemas.py
backend/app/core/: categories.py  config.py  identifiers.py  logging.py
backend/app/data/: categories.json
backend/app/modules/health/: router.py
backend/app/modules/uploads/: router.py  schemas.py  service.py
backend/app/modules/videos/: catalog.py  router.py  schemas.py  service.py
backend/app/repositories/: __init__.py  video_repository.py  video_repository_sync.py
backend/app/workers/: celery_app.py  processing.py  tasks.py  thumbnails.py  transcode.py
backend/scripts/: export_openapi.py
backend/tests/: conftest.py
backend/tests/common/: test_errors.py
backend/tests/modules/health/: test_health.py
backend/tests/modules/uploads/: test_router.py
frontend/: .dockerignore  .env.example  .gitignore  .prettierignore  Dockerfile  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: main.tsx  vite-env.d.ts
frontend/src/api/: client.ts  health.ts  mappers.ts  schema.d.ts  uploads.ts  videos.ts
frontend/src/app/: providers.tsx  router.tsx
frontend/src/lib/: cx.ts  (+5 more)
infra/terraform/: README.md  dynamodb.tf  outputs.tf  provider.tf  s3.tf  terraform.tfvars.example  variables.tf
(+52 files in other folders)
