[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for the video streaming platform"
readme = "README.md"
authors = [
    { name = "Dev Parikh", email = "dev.dpparikh@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "aioboto3>=13.0.0",
    "aiofiles>=25.1.0",
    "boto3>=1.34.0",
    "celery>=5.6.3",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "redis>=8.0.0",
    "terraform-local>=0.26.0",
    "types-aioboto3[essential]>=13.2.0.post3",
    "types-aiobotocore[s3]>=3.7.0",
    "types-boto3>=1.43.28",
    "uvicorn>=0.49.0",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
package = false

[dependency-groups]
dev = [
    "aiomoto>=0.5.3",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.17",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
